# novel_editor

./: .coverage  .coveragerc  .gitignore  .scrutinizer.yml  .travis.yml  5.壱章－１.txt  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  README.md  SECURITY.md  coverage.bat  coverage.py  hello.spec  novel_editor.spec  py2exe.bat  pyproject.toml  run-tests.sh  scrutinizer.py  test.py
.github/ISSUE_TEMPLATE/: --------.md  ------.md
C#/: Program.cs  make.bat  make.csproj
C#/Properties/: AssemblyInfo.cs
docs/doctrees/: CP.doctree  CW.doctree  EM.doctree  EP.doctree  FM.doctree  FP.doctree  HM.doctree  HP.doctree  LM.doctree  MC.doctree  MD.doctree  MP.doctree  NovelEditor.doctree  PM.doctree  SF.doctree  SP.doctree  editmenu.doctree  environment.pickle  helpmenu.doctree  highlight.doctree  i18n.doctree  index.doctree  modules.doctree  mydialog.doctree  neditor.doctree  novel_editor.doctree  processingmenu.doctree  subfunction.doctree  use.doctree
docs/html/: .buildinfo  CP.html  CW.html  EM.html  EP.html  FM.html  FP.html  HM.html  (+26 more)
exe/: novel_editor.bat  novel_editor.session
htmlcov/: index.html  novel_editor_py.html  source_novel_editor_py.html  status.json
source/: .coveralls.yml  CP.py  CW.py  EM.py  EP.py  FM.py  FP.py  HM.py  HP.py  LM.py  MC.py  MD.py  MP.py  PM.py  SF.py  SP.py  appid.txt  change.py  editmenu.py  helpmenu.py  highlight.py  mydialog.py  novel_editor.py  processingmenu.py  subfunction.py  test.py
sphinx/: CP.rst  EM.rst  EP.rst  FM.rst  FP.rst  HM.rst  LM.rst  MD.rst  MP.rst  NovelEditor.rst  PM.rst  SP.rst  conf.py  i18n.rst  index.rst  make.bat  modules.rst  novel_editor.rst  processingmenu.rst  use.md
(+232 files in other folders)
