[tool.poetry]
name = "novel-editor"
version = "0.9.0"
description = ""
authors = ["Yamahara Yoshihiro <yoshihiro@yamahara.email>"]
readme = "README.md"
packages = [{include = "novel_editor"}]

[tool.poetry.dependencies]
python = "^3.11.1"
wikipedia-api = "^0.5.8"
janome = "^0.4.2"
jaconv = "^0.3.4"
pyttsx3 = "^2.90"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
